Mobile vh issues should be reduced. Chrome URL bar may not need to collapse

--- a/components/auth-pages/auth-pages.module.css
+++ b/components/auth-pages/auth-pages.module.css
@@ -1,5 +1,5 @@
 .formContainer {
-	height: 100%;
+	height: calc(100% - var(--main-nav-height));
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -176,6 +176,7 @@
 	margin: 0;
 	transform: translateY(-40%);
 }
+
 .separatorLine span {
 	text-align: center;
 	flex: 0.2 0 auto;
@@ -188,6 +189,7 @@
 }
 
 @media screen and (max-width: 600px) {
+
 	.formOuter,
 	.formOuterRegister {
 		width: 90%;
@@ -195,6 +197,7 @@
 }
 
 @media screen and (min-width: 601px) and (max-width: 1200px) {
+
 	.formOuter,
 	.formOuterRegister {
 		width: 60%;
@@ -202,6 +205,7 @@
 }
 
 @media screen and (min-width: 2560px) {
+
 	.formOuter,
 	.formOuterRegister {
 		width: 1000px;
