--- a/components/home-page/home-page-content.module.css
+++ b/components/home-page/home-page-content.module.css
@@ -1,6 +1,6 @@
 .homePageContent {
 	color: white;
-	height: calc(100vh - var(--main-nav-height));
+	height: calc(100% - var(--main-nav-height));
 	display: flex;
 	flex-direction: column;
 	align-items: center;
