--- a/components/layout/app/app-layout.module.css
+++ b/components/layout/app/app-layout.module.css
@@ -1,5 +1,5 @@
 .bars {
-	height: calc(100 * var(--vh));
+	height: 100%;
 	display: flex;
 	flex-direction: row;
 }
