--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,7 +80,6 @@ html {
 
 body {
 	margin: 0;
-	height: calc(100 * var(--vh));
 	overflow: hidden;
 }
 
